<?xml version="1.0" encoding="utf-8"?>

<!-- All preferences are saved as key-value pairs in the default SharedPreferences with the key
    specified through this xml.  To retrieve an instance of those preferences, call the following
    with a context in the same package as the fragment:
    SharedPreferences preferences = PreferenceManager.getDefaultSharedPreferences(android.content.Context);-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

</PreferenceScreen>